fixes, changed models, almost finished all task work, timer time display, auth

--- a/src/app/greeting/greeting.component.scss
+++ b/src/app/greeting/greeting.component.scss
@@ -12,7 +12,7 @@
     height: 2px;
     bottom: 4px;
     width: 107px;
-    background: #d4ff3e;
+    background: var(--accent);
   }
 
   .arrow {
