--- a/src/app/timer/timer.component.html
+++ b/src/app/timer/timer.component.html
@@ -1,6 +1,6 @@
 <div class="time-gauge position-relative">
   <p class="time">
-    {{ formatTime(pomodoroTime) }}
+    {{ formatTime(displayTime) }}
     <span
       style="
         position: absolute;
@@ -8,13 +8,13 @@
         font-size: 15px;
         color: var(--text-pale-color);
       "
-      >{{ completedPomodoros }} /4</span
+    >{{ completedRounds }}/{{numberOfRounds}}</span
     >
   </p>
   <div
     class="gauge"
     [style.background]="
-      'conic-gradient(#D4FF3E ' +
+      'conic-gradient(var(--accent) ' +
       percent +
       'deg, rgb(204 204 204 / 20%) ' +
       percent +
@@ -23,10 +23,10 @@
   ></div>
 </div>
 <div class="controls mt-4 d-flex justify-content-between align-items-center">
-  <p (click)="cancelPomodoro()">reset</p>
+  <p (click)="cancelRound()">reset</p>
   <svg
     *ngIf="!interval"
-    (click)="startPomodoro()"
+    (click)="startRound()"
     height="30"
     width="30"
     xmlns="http://www.w3.org/2000/svg"
@@ -38,11 +38,11 @@
     stroke-linejoin="round"
     class="lucide lucide-play"
   >
-    <polygon points="5 3 19 12 5 21 5 3" />
+    <polygon points="5 3 19 12 5 21 5 3"/>
   </svg>
   <svg
     *ngIf="!!interval"
-    (click)="stopPomodoro()"
+    (click)="stopRound()"
     height="30"
     width="30"
     xmlns="http://www.w3.org/2000/svg"
@@ -54,8 +54,8 @@
     stroke-linejoin="round"
     class="lucide lucide-pause"
   >
-    <rect width="4" height="16" x="6" y="4" />
-    <rect width="4" height="16" x="14" y="4" />
+    <rect width="4" height="16" x="6" y="4"/>
+    <rect width="4" height="16" x="14" y="4"/>
   </svg>
   <p (click)="break()">break</p>
 </div>
