--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -6,19 +6,20 @@
 
 .signup {
   padding: 4px 12px;
-  box-shadow: 0 0 3px #d4ff3e;
+  box-shadow: 0 0 3px var(--accent);
   border-radius: 8px;
-  border: 2px solid #d4ff3e;
+  border: 2px solid var(--accent);
   background: transparent;
   font-size: 13px;
 }
 
 .task {
   width: 370px;
-  height: 68px;
+  min-height: 68px;
   flex-shrink: 0;
   border-radius: 20px;
   background: rgb(139 139 139 / 10%);
+  border: 1px solid rgba(139, 139, 139, 0.1);
 
   .checkbox {
     width: 20px;
@@ -32,6 +33,10 @@
     font-size: 15px;
     font-weight: 500;
     text-decoration-color: var(--text-color);
+    width: 265px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   .task-undertext {
