--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -253,3 +253,6 @@
     </ng-container>
   </div>
 </ng-template>
+
+<ngx-spinner bdColor="var(--text-pale-color)" size="default" color="var(--text-color)" type="ball-8bits"
+             [fullScreen]="true"></ngx-spinner>
