--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -273,3 +273,6 @@
     </ng-container>
   </div>
 </ng-template>
+
+<ngx-spinner bdColor="var(--text-pale-color)" size="default" color="var(--text-color)" type="ball-8bits"
+             [fullScreen]="true"></ngx-spinner>
