--- a/src/app/greeting/greeting.component.html
+++ b/src/app/greeting/greeting.component.html
@@ -1,4 +1,4 @@
-<div style="height: 100vh; width: 100vw">
+<div style="height: 100vh; width: 100vw;overflow: hidden;">
   <div class="d-flex justify-content-center position-relative m-5">
     <svg
       xmlns="http://www.w3.org/2000/svg"
